JDK-8244603 breaks windows build

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 16
    • Affects Version/s: 16
    • Component/s: hotspot
    • gc
    • b04

      [2020-06-25T14:47:29,627Z] ./open/src/hotspot/share/gc/g1/g1Policy.cpp(987): error C2220: the following warning is treated as an error
      [2020-06-25T14:47:29,627Z] ./open/src/hotspot/share/gc/g1/g1Policy.cpp(987): warning C4267: 'initializing': conversion from 'size_t' to 'uint', possible loss of data

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: