8248329: JDK-8244603 breaks windows build

Reviewed-by: sundar, dcubed